--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -33,4 +33,4 @@ address {
   margin-top: 1em;
   padding-top: 1em;
   border-top: thin dotted }
-logo { text-align : center }
+logo:body { text-align : center }
