--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -32,8 +32,8 @@ h1 {
   position: absolute;
   top: 200px; 
   left: 200px; 
-/*  height: 130px; 
-  width: 130px; */
+  height: 130px; 
+  width: 130px;
   color: green;
   background-color: yellow
  }
