new homepage design

--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -33,7 +33,7 @@ h1 {
   top: 0px; 
   left: 0px; 
   height: 500px; 
-  width: 500px;
+/*  width: 500px; */
   color: green;
   background-color: yellow
  }
