--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -30,10 +30,10 @@ h1 {
 
 .navbar { 
   position: absolute;
-  top: 0px; 
-  left: 50px; 
+  top: 100px; 
+  left: 0px; 
   height: 250px; 
-/*  width: 500px; */
+  width: 100%;
   color: green;
   background-color: yellow
  }
