--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -30,8 +30,8 @@ h1 {
 
 .navbar { 
   position: absolute;
-  top: 200px; 
-  left: 20px; 
+  top: 180px; 
+  left: 17px; 
   height: 250px; 
   width: 150px;
   color: green;
@@ -46,6 +46,7 @@ code {
 .navbar li {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 ul.navbar a {
