--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -13,7 +13,7 @@ body {
 .navbar ul { 
   list-style-type: none;
   padding: 0;
-/*  margin: 0;*/
+  margin-top: 0;
 }
 
 h1 {
@@ -25,7 +25,7 @@ h1 {
   position: absolute;
   top: 180px; 
   left: 17px; 
-  height: 450px; 
+  height: 300px; 
   width: 115px;
   background-color: red
  }
