--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -25,15 +25,15 @@ h1 {
   position: absolute;
   top: 180px; 
   left: 17px; 
-  height: 300px; 
+  height: 350px; 
   width: 116px;
   background-color: red
  }
 
-/*.navbar h1 {
+.navbar h1 {
   padding: 0px;
   margin: 0px;
-}*/
+}
 
 code {
   white-space: pre } /*make CODE environment respect whitespace to enable verbatim printing of code snippets in starred header lines*/
