new homepage design

--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -41,7 +41,7 @@ code {
 /*.navbar li {
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0 1ex;
 }*/
 
 a:link {text-decoration: none}
