--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -6,9 +6,9 @@ body {
   /*padding-left: 11em;*/
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10pt;
-  color: black;
+  color: #565656; /*black;*/
   background-color: white 
-} /*#d8da3d }*/
+}
 
 .navbar ul { 
   list-style-type: none;
