--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -34,14 +34,29 @@ h1 {
   margin: 0px;
 }
 
+.navbar a:link, .navbar a:visited, .navbar a:active {
+  font-weight: normal ;
+  text-decoration: none ;
+  color: #565656;
+}
+.navbar a:hover {
+  font-weight: normal ;
+  text-decoration: underline; 
+  color: #565656;
+}
+
 code {
   white-space: pre } /*make CODE environment respect whitespace to enable verbatim printing of code snippets in starred header lines*/
 
-/*.navbar li {
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 0 1ex;
-}*/
+
+.dynamic { 
+  position: absolute;
+  top: 0px; 
+  left: 0px; 
+  height: 100%; 
+  width: 100%;
+  background: yellow;
+ }
 
 .dynamic a:link, .dynamic a:visited, .dynamic a:active {
   font-weight: normal ;
@@ -52,17 +67,6 @@ code {
   font-weight: normal ;
   text-decoration: underline; 
   color: black;
-}
-
-.navbar a:link, .navbar a:visited, .navbar a:active {
-  font-weight: normal ;
-  text-decoration: none ;
-  color: #565656;
-}
-.navbar a:hover {
-  font-weight: normal ;
-  text-decoration: underline; 
-  color: #565656;
 }
 
 address {
