--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -51,9 +51,9 @@ code {
 
 .dynamic { 
   position: absolute;
-  top: 10px; 
+  top: 20px; 
   left: 0px; 
-  height: 100%; 
+/*  height: 100%; */
   width: 100%;
   background: yellow;
  }
