--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -5,7 +5,6 @@ display files */
 body {
   /*padding-left: 11em;*/
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1pt;
   color: #565656; /*black;*/
   background-color: white 
 }
@@ -27,7 +26,7 @@ h1 {
   left: 17px; 
   height: 375px; 
   width: 116px;
-  font-size: 10pt;
+  font-size: 5pt;
  }
 
 .navbar h1 {
@@ -53,7 +52,10 @@ code {
 .dynamic { 
   padding: 0px;
   margin: 37px 20px 20px 20px;
-  font-size: 30pt;
+ }
+
+.dynamic p { 
+  font-size: 10pt ;
  }
 
 .dynamic a:link, .dynamic a:visited, .dynamic a:active {
