--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -56,7 +56,11 @@ code {
  }
 
 .dynamic p { 
-  font-size: 5pt ;
+  font-size: 10pt ;
+ }
+
+.dynamic table { 
+  font-size: 10pt ;
  }
 
 .dynamic a:link, .dynamic a:visited, .dynamic a:active {
