--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -4,7 +4,7 @@ display files */
 
 body {
   /*padding-left: 11em;*/
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: helvetica, arial,sans-serif;
   font-size: 10pt;
   color: #565656; /*black;*/
   background-color: white 
@@ -47,6 +47,7 @@ h1 {
 }
 
 code {
+  font-family: courier,serif;
   white-space: pre } /*make CODE environment respect whitespace to enable verbatim printing of code snippets in starred header lines*/
 
 
