--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -10,12 +10,6 @@ body {
   background-color: white 
 }
 
-.navbar ul { 
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 2ex 0;
-}
-
 h1 {
   font-size: 100%;
   font-weight: bold
@@ -33,6 +27,13 @@ h1 {
 .navbar h1 {
   padding: 0px;
   margin: 0px;
+}
+
+.navbar ul { 
+  list-style-type: none;
+  padding: 0;
+  margin: 0 0 2ex 0;
+  text-transform: lowercase;
 }
 
 .navbar a:link, .navbar a:visited, .navbar a:active {
