--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -15,6 +15,17 @@ h1 {
   font-weight: bold
 }
 
+a:link, a:visited, a:active {
+  font-weight: normal ;
+  text-decoration: none ;
+  color: #565656;
+}
+a:hover {
+  font-weight: normal ;
+  text-decoration: underline; 
+  color: #565656;
+}
+
 .navbar { 
   position: absolute;
   top: 180px; 
@@ -27,13 +38,6 @@ h1 {
 .navbar h1 {
   padding: 0px;
   margin: 0px;
-}
-
-.navbar ul { 
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 2ex 0;
-  text-transform: lowercase;
 }
 
 .navbar a:link, .navbar a:visited, .navbar a:active {
