--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -64,11 +64,11 @@ a:hover {
 .navbar input
 {
 color: #781351;
-background: #999999;
+background: #D0D0D0;
 border: 1px solid #565656;
 }
 
-.navbar submit input
+.submit input
 {
 color: #000;
 background: #ffa20f;
