input form style

--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -70,7 +70,7 @@ border: 1px solid #565656;
 
 .go input
 {
-text-align:right;
+text-align: center;
 color: #565656;
 background: #ffa20f;
 border: 2px outset #d7b9c9
