input form style

--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -73,7 +73,7 @@ input.btn
 /*position: relative;
 left: 50px;*/
 color: #565656;
-background: #ffa20f;
+/*background: #ffa20f;*/
 border: 2px outset #d7b9c9
 }
 
