--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -64,7 +64,7 @@ a:hover {
 /* style of the search input field in the navbar */
 .navbar input
 {
-width: 100%;
+width: 116px;
 color: black;
 background: #F0F0F0;
 border: 1px solid #565656;
