--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -1,114 +1,176 @@
 /* bananestyle.css is the file containing the style sheet info
-for the banane online documentation. it is used by all other web 
-display files */
-
+for the banane online documentation. it is also responsible for the 
+positioning of the various elements of the page*/
 
 /* general settings */
 body {
-  font-family: helvetica, arial,sans-serif;
-  font-size: 10pt;
-  color: #565656; /*special banane grey*/
-  background-color: white 
-}
-
-h1 {
-  font-size: 100%;
-  font-weight: bold
+  text-align: center;
+  background: #e6e7e9;
+  color: blue; /*#737373;*/
+  font-family: helvetica, arial, sans-serif;
+  font-size: 9pt;
 }
 
 a:link, a:visited, a:active {
-  font-weight: normal ;
   text-decoration: none ;
-  color: #565656;
+  color: #737373;
 }
+
 a:hover {
-  font-weight: normal ;
   text-decoration: underline; 
-  color: #565656;
+  color: #737373;
 }
 
-/* settings concerning the navigation bar introduced in the links.php script */
-.navbar { 
+
+
+/* the centered region which contains everything else */
+div.content {
+  position: relative;
+  top:15px;
+  width:823px;
+  height:704px;
+  margin:0 auto;
+  text-align:left;
+  background-image:url('Pics/frame.gif');
+  background-repeat:no-repeat;
+}
+
+div.content h1 {
+  font-size:100%;  
+  font-weight:bold;
+}
+
+/* link behind the banane logo */
+a#linkhome {
   position: absolute;
-  top: 180px; 
-  left: 17px; 
-  height: 375px; 
-  width: 116px;
-  font-size: 10pt;
- }
-
-.navbar h1 {
-  padding: 0px;
-  margin: 0px;
+  top: 36px;
+  left: 41px;
+  height: 44px;
+  width: 162px;
 }
 
-.navbar ul {
+
+
+/* headline contains links to about, blog, members */
+div.headline {
+  position: absolute;
+  top: 121px;
+  left: 204px;
+  bottom: 560px;
+  right: 274px;
   padding: 0px;
-  margin: 0px;
-  margin-bottom: 3ex;
-  list-style-type: none;
+  text-align:left;
+  word-spacing:1.2em; 
+  font-weight:bold; 
+}
+
+
+
+/* search input form, in the same line as headline, but right-aligned */
+div.search {
+  position: absolute;
+  top: 118px;
+  left: 618px;
+  bottom: 560px;
+  right: 69px;
+  padding: 0px;
+  text-align:right;
+  font-weight:bold;
+}
+
+.search input {
+  color: black;
+  background: #f9f9f9;
+  border: 1px solid #5c5c5c;
+  width:75px;
+  padding: 0px;
+  vertical-align: baseline;
+}
+
+
+
+/* the title line of the directory navigation region */ 
+div.navigation_head {
+  position: absolute;
+  top: 121px;
+  left: 68px;
+  bottom: 560px;
+  right: 625px;
+  padding: 0px;
   text-transform: lowercase;
 }
 
-.navbar a:link, .navbar a:visited, .navbar a:active {
-  font-weight: normal ;
-  text-decoration: none ;
-  color: #565656;
+
+
+/* the main part of the directory navigation region */
+div.navigation {
+  position: absolute;
+  top: 151px;
+  left: 64px;
+  bottom: 69px;
+  right: 625px;
+  padding: 0px;
+  text-transform: lowercase;
+  overflow: auto; 
+  line-height:160%;
 }
-.navbar a:hover {
+
+
+
+/* the bottom region containing some links */
+div.bottom {
+  position: absolute;
+  top: 687px;
+  left: 430px;
+  bottom: 0px;
+  right: 37px;
+  padding: 0px;
+  text-align: right;
+  font-size: 85%; 
+}
+
+
+
+/* the main part of the webpage which dynamically changes its contents */
+div.main {
+  position: absolute;
+  top: 153px;
+  left: 204px;
+  bottom: 69px;
+  right: 52px;
+  padding-right: 15px;
+  overflow: auto;
+}
+
+div.main h1 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.main a:link, .main a:visited, .main a:active {
+  font-weight: normal ;
+  text-decoration: underline ;
+}
+
+.main a:hover {
   font-weight: normal ;
   text-decoration: underline; 
-  color: #565656;
+  color: #000000;
 }
 
-/* style of the search input field in the navbar */
-.navbar input
-{
-color: black;
-background: #F0F0F0;
-border: 1px solid #565656;
-}
-
-/* style of the go! search bottom in the navbar */
-.navbar input.btn
-{
-color: #565656;
-font-size: 80%;
-border: 2px outset #d7b9c9
+.main table { 
+  font-size: 100%;
 }
 
 
-/* the code environment is used to typeset the header lines marked with a star */
+
+/* the code environment is used to typeset the header lines 
+marked with a star */
 code {
   font-family: courier,serif;
   white-space: pre } /*make CODE environment respect whitespace to enable verbatim printing of code snippets in starred header lines*/
 
 
-/* settings for the dynamic environment that is used in the large
-main frame on the right of the banane page */ 
-.dynamic { 
-  padding: 0px;
-  margin: 37px 20px 20px 20px;
- }
-
-.dynamic p { 
-  font-size: 100%;
- }
-
-.dynamic table { 
-  font-size: 90%;
- }
-
-.dynamic a:link, .dynamic a:visited, .dynamic a:active {
-  font-weight: normal ;
-  text-decoration: underline ;
-  color: #565656;
-}
-.dynamic a:hover {
-  font-weight: normal ;
-  text-decoration: underline; 
-  color: black;
-}
 
 /* style for header sections like NAME, AIM, SYNTAX and so on */
 .head sec { font-weight: bold }
