--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -162,6 +162,7 @@ div.main h1 {
   font-size: 100%;
 }
 
+.main td {padding:4px;margin:2px;}
 
 
 /* the code environment is used to typeset the header lines 
