--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -169,7 +169,7 @@ div.main h1 {
 }
 
 .main td.left {
-  border-collapse: collapse; */
+  border-collapse: collapse;
   padding-right: 0.5em;
   border: thin black solid;
 }
