--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -165,12 +165,14 @@ div.main h1 {
 .main td.right {
   border-collapse: collapse;
   padding-left: 0.5em;
+  margin: 0px;
   border: thin black solid;
 }
 
 .main td.left {
   border-collapse: collapse;
   padding-right: 0.5em;
+  margin: 0px;
   border: thin black solid;
 }
 
