--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -159,7 +159,11 @@ div.main h1 {
 }
 
 .main table { 
-  font-size: 100%;
+  font-size: 95%;
+}
+
+.main td {
+  margin: 0px;
 }
 
 .main td.right {
