--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -164,20 +164,19 @@ div.main h1 {
 }
 
 .main td {
-  /*margin: 0px;*/
   padding: 0px;
-  border: 0px; /*thin solid black;*/
+  border: 0px;
 }
 
 .main td.right {
 /*  padding: 0px; */
-  padding-left: 1em;
+  padding-left: 0em;
 /*  margin: 0px;*/
 }
 
 .main td.left {
 /*  padding: 0px;*/
-  padding-right: 0em;
+  padding-right: 1em;
 /*  margin: 0px;*/
 }
 
