--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -144,7 +144,7 @@ div.main {
 
 div.main h1 {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 0.25ex;
 }
 
 .main a:link, .main a:visited, .main a:active {
@@ -170,7 +170,7 @@ div.main h1 {
 }
 
 .main td.left {
-  padding-right: 0.5em;
+  padding-right: 0.75em;
 }
 
 
