--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -28,11 +28,12 @@ div.content {
   position: relative;
   top:15px;
   width:823px;
-  height:704px;
+  /*height:704px;*/
   margin:0 auto;
   text-align:left;
-  background-image:url('Pics/frame.gif');
-  background-repeat:no-repeat;
+/*  background-image:url('Pics/frame.gif');
+  background-repeat:no-repeat; */
+  background:url("Pics/frame.gif") bottom left no-repeat;
 }
 
 div.content h1 {
