--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -9,6 +9,7 @@ body {
   color: #737373;
   font-family: helvetica, arial, sans-serif;
   font-size: 9pt;
+  line-height : 2ex;
 }
 
 a:link, a:visited, a:active {
