--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -85,10 +85,12 @@ div.headline {
 /* search input form, in the same line as headline, but right-aligned */
 div.search {
   position: absolute;
-  top: 118px;
-  left: 618px;
-  bottom: 560px;
-  right: 69px;
+  top: 103px;
+  left: 580px;
+/*  bottom: 560px;
+  right: 69px; */
+  height: 15px;
+  width: 138px;
   padding: 0px;
   text-align:right;
   font-weight:bold;
@@ -109,12 +111,10 @@ div.search {
 /* the title line of the directory navigation region */ 
 div.navigation_head {
   position: absolute;
-  top: 102px; /*121px;*/
-  left: 30px; /*68px;*/
+  top: 103px;
+  left: 30px;
   height: 15px;
   width: 115px;
-/*  bottom: 560px;
-  right: 625px; */
   padding: 0px;
   border: 1px solid #5c0000;
   text-transform: lowercase;
