--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -126,7 +126,7 @@ div.navigation_head {
 div.navigation {
   position: absolute;
   top: 137px;
-  left: 166px;
+  left: 30px;
   bottom: 69px;
   right: 625px;
   padding: 0px;
@@ -156,10 +156,12 @@ div.bottom {
 /* the main part of the webpage which dynamically changes its contents */
 div.main {
   position: absolute;
-  top: 153px;
-  left: 204px;
-  bottom: 69px;
-  right: 52px;
+  top: 137px;
+  left: 166px;
+  height: 520px;
+  width: 552px;
+  /*bottom: 69px;
+  right: 52px;*/
   padding-right: 15px;
   overflow: auto;
   line-height : 2.5ex;
