--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -83,7 +83,7 @@ div.headline {
 /* search input form, in the same line as headline, but right-aligned */
 div.search {
   position: absolute;
-  top: 99px;
+  top: 100px;
   left: 580px;
   height: 18px;
   width: 138px;
@@ -129,7 +129,7 @@ div.navigation {
   text-transform: lowercase;
   overflow: auto; 
   line-height:160%;
-  border: 1px solid #5c0000;
+  /*border: 1px solid #5c0000;*/
 }
 
 
@@ -140,7 +140,7 @@ div.bottom {
   top: 670px;
   left: 360px;
   bottom: 0px;
-  right: 33px;
+  right: 30px;
   padding: 0px;
   text-align: right;
   font-size: 85%; 
@@ -156,13 +156,11 @@ div.main {
   left: 166px;
   height: 508px;
   width: 552px;
-  /*bottom: 69px;
-  right: 52px;*/
   padding-right: 15px;
   overflow: auto;
   line-height : 2.5ex;
   text-align:justify;
-  border: 1px solid #5c0000;
+  /*border: 1px solid #5c0000;*/
 }
 
 div.main h1 {
