--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -144,7 +144,7 @@ div.bottom {
   padding: 0px;
   text-align: right;
   font-size: 85%; 
-  border: 1px solid #5c0000;
+  /*border: 1px solid #5c0000;*/
 }
 
 
