--- a/trunk/Documentation/PHP/bananestyle.css
+++ b/trunk/Documentation/PHP/bananestyle.css
@@ -13,7 +13,7 @@ html,body {
   font-family: helvetica, arial, sans-serif;
   font-size: 8pt;
   line-height : 2.5ex;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 a:link, a:visited, a:active {
